# Calculadora-de-ponto-de-fun-o

./: .gitignore  README.md
apps/api/: README.md  pyproject.toml  requirements.txt
apps/api/app/: config.py  main.py
apps/api/app/fpa/: __init__.py  models.py  rules.py
apps/api/app/ingest/: __init__.py  extractor.py
apps/api/app/jobs/: __init__.py  store.py
apps/api/app/llm/: __init__.py  ollama.py  prompt.py
apps/api/tests/: conftest.py  test_api.py  test_fpa_rules.py  test_ingest.py  test_ollama_client.py  test_prompt.py
apps/web/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/analyze/[jobId]/: page.tsx
apps/web/src/components/: fpa-result-card.tsx  function-breakdown-table.tsx  job-progress.tsx  upload-dropzone.tsx  vaf-factors-list.tsx
apps/web/src/components/__tests__/: fpa-result-card.test.tsx  function-breakdown-table.test.tsx  job-progress.test.tsx  responsive.test.tsx  upload-dropzone.test.tsx
apps/web/src/components/ui/: alert.tsx  button.tsx  table.tsx
apps/web/src/lib/: api.ts  types.ts  utils.ts
docs/: ARCHITECTURE.md  SECURITY.md
